--- a/Myon/Protokoll/LM_Protokoll_ausw.tex
+++ b/Myon/Protokoll/LM_Protokoll_ausw.tex
@@ -46,7 +46,7 @@
 		\begin{figure}[Hp]
 		    \centering
 		    \captionsetup{justification=centering}
-%		    \includegraphics[width=1.\linewidth]{pic/expZerf.pdf}
+		    \includegraphics[width=1.\linewidth]{pic/expZerf.pdf}
 			\caption{Ermittlung der Lebensdauer durch Bestimmung der Nullstelle von $f$ (grüner Punkt) wobei die Kanäle 17 bis 175 genutzt worden.}
 			\label{fig:LDexpZerf1}
 		\end{figure}	
@@ -54,7 +54,7 @@
 		\begin{figure}[Hp]
 			\centering
 			\captionsetup{justification=centering}
-%		    \includegraphics[width=1.\linewidth]{pic/expZerf2.pdf}
+		    \includegraphics[width=1.\linewidth]{pic/expZerf2.pdf}
 		    \caption{Ermittlung der Lebensdauer durch Bestimmung der Nullstelle von $f$ (grüner Punkt) wobei die Kanäle 11 bis 200 genutzt worden.}
 		    \label{fig:LDexpZerf2}
 		\end{figure}
@@ -82,7 +82,7 @@
 		\begin{figure}[hp]
 		      			\centering
 		      			\captionsetup{justification=centering}
-%		      			\includegraphics[width=1.\linewidth]{pic/poisson.pdf}
+		      			\includegraphics[width=1.\linewidth]{pic/poisson.pdf}
 		      			\caption{Ermittlung der Lebensdauer durch Bestimmung des Minimums (grüner Punkt) der effektiven Likelihoodfunktion mit zugrundeliegender Poissonverteilung.}
 		      			\label{fig:LDpoisson}
 		\end{figure}
@@ -111,7 +111,7 @@
    		\begin{figure}[hp]
       		   			\centering
       		   			\captionsetup{justification=centering}
-%      		   			\includegraphics[width=1.\linewidth]{pic/gauss.pdf}
+      		   			\includegraphics[width=1.\linewidth]{pic/gauss.pdf}
       		   			\caption{Ermittlung der Lebensdauer durch Bestimmung des Minimums von $\chi^2(\tau)$. blauer Graph: $\chi^2$ mit zusammengefassten Kanälen, grüner Graph: ohne diese zusammenzufassen.}
       		   			\label{fig:LDgauss}	
       	\end{figure}
